# coral_hand_mouse

./: calibration.py  main.py  test.py
calibration_results/: camera_calibration.json
cpp/: CMakeLists.txt  main.cpp
cpp/include/: CameraDevice.h  DepthProcessor.h  config.h
cpp/src/: CameraDevice.cpp  DepthProcessor.cpp
mouse/: hand_detection.py  mouse_control.py
pose/: hand_pose.py
python/: README.md  calibration.py  main.py
python/depth/: depth_estimation.py
python/image_proc/: __init__.py  image_proc.py
raw_image_proc/: image_proc.py
